--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "url": "https://github.com/guhcalm/minimal-boilerplate.git"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.2.2",
+    "@react-three/postprocessing": "^2.5.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -28,6 +31,7 @@
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.143.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
