--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "repository": {
     "url": "https://github.com/guhcalm/minimal-boilerplate.git"
   },
-  "dependencies": {
-    "@react-three/fiber": "^8.2.2",
-    "@react-three/postprocessing": "^2.5.5",
+  "dependencies": {"@react-three/fiber": "8.0.12",
+  "@react-three/postprocessing": "2.4.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "styled-components": "^5.3.5",
-    "three": "^0.143.0"
+    "three": "0.142.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -31,7 +30,7 @@
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
     "@types/styled-components": "^5.1.25",
-    "@types/three": "^0.143.0",
+    "@types/three": "0.132.0",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "babel-loader": "^8.2.5",
@@ -48,7 +47,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.0",
     "prettier": "^2.6.2",
-    "terser-webpack-plugin": "^5.3.3",
+    "terser-webpack-plugin": "^5.3.3",  
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
